ncap/Ifc58/include/IFCAPI.H

/* CImgConn class */
void IFCCALL CImgConn_Display(CImgConn *imgConn);
BOOL IFCCALL CImgConn_Create(CImgConn *imgConn);
BOOL IFCCALL CImgConn_StartLiveImage(CImgConn *imgConn,CICamera *cam, ICAP_INTR_EVENT intrEvent , WORD InterruptScale );
  
BOOL IFCCALL CImgConn_StopLiveImage(CImgConn *imgConn);
BOOL IFCCALL CImgConn_LiveImageSuspend(CImgConn *imgConn);
BOOL IFCCALL CImgConn_LiveImageResume(CImgConn *imgConn);
double IFCCALL CImgConn_GetLiveImageFPS(CImgConn *imgConn);
IFC_HDC IFCCALL CImgConn_GetOverlayDC(CImgConn *imgConn);
void IFCCALL CImgConn_ReleaseOverlayDC(CImgConn *imgConn,IFC_HDC hDC);
void IFCCALL CImgConn_EnableOverlay(CImgConn *imgConn,BOOL bEnable);
//CCallBackServer *IFCCALL CImgConn_GetImgServer(CImgConn *imgConn);
pCImgSrc IFCCALL CImgConn_GetSrc(CImgConn *imgConn);
pCImgSink IFCCALL CImgConn_GetSink(CImgConn *imgConn);
pCOverlay IFCCALL CImgConn_GetOverlay(CImgConn *imgConn);
	
WORD IFCCALL CImgConn_GetOverlayWidth(CImgConn *imgConn);
WORD IFCCALL CImgConn_GetOverlayHeight(CImgConn *imgConn);
DWORD IFCCALL CImgConn_GetOverlayMaxStretch(CImgConn *imgConn);
WORD IFCCALL CImgConn_GetOverlayBitsPP(CImgConn *imgConn) ;
DWORD IFCCALL CImgConn_GetOverlayMinStretch(CImgConn *imgConn);
OVERLAY_KIND IFCCALL CImgConn_GetOverlayKind(CImgConn *imgConn) ;
/* CImgFile class */
BOOL IFCCALL CImgFile_ReadFile(CImgFile *imgFile,BYTE *dest);
 
BOOL IFCCALL CImgFile_WriteFile(CImgFile *imgFile,BYTE *src, DWORD dx, DWORD dy, WORD bitsPerPixel, IFFCLASS_TYPE imgClass, IFFCOMPRESSION_TYPE imgCompress);
   
BOOL IFCCALL CImgFile_ImageFileProps(CImgFile *imgFile,LPIMGFILEPROPS props);
 

/* CImgSink class */

WORD IFCCALL CImgSink_GetAoiStartX(CImgSink *imgSink) ;
WORD IFCCALL CImgSink_GetAoiStartY(CImgSink *imgSink) ;
WORD IFCCALL CImgSink_GetWidth(CImgSink *imgSink) ;
WORD IFCCALL CImgSink_GetHeight(CImgSink *imgSink) ;
WORD IFCCALL CImgSink_GetLinePitch(CImgSink *imgSink) ;
void IFCCALL CImgSink_SetAoiPos(CImgSink *imgSink,const WORD wxAoiStart, const WORD wyAoiStart);
void IFCCALL CImgSink_GetAoiPos(CImgSink *imgSink,WORD *pwxAoiStart, WORD *pwyAoiStart)  ;
//void IFCCALL CImgSink_GetAoiPos(CImgSink *imgSink,RECT *pRect)  ;
IFC_HWND IFCCALL CImgSink_GetSinkWindow(CImgSink *imgSink);
void IFCCALL CImgSink_GetZoom(CImgSink *imgSink,double *ZoomX, double *ZoomY) ;
void IFCCALL CImgSink_SetZoom(CImgSink *imgSink,double ZoomX, double ZoomY);
double IFCCALL CImgSink_GetZoomX(CImgSink *imgSink) ;
double IFCCALL CImgSink_GetZoomY(CImgSink *imgSink) ;
BOOL IFCCALL CImgSink_ResizeWindow(CImgSink *imgSink);
BOOL IFCCALL CImgSink_Create(CImgSink *imgSink);
pCImgSink IFCCALL CImgSink_MakeCopy(CImgSink *imgSink);
pBYTE  IFCCALL CImgSink_GetBufferAddr(CImgSink *imgSink) ;
WORD IFCCALL CImgSink_GetBitsPP(CImgSink *imgSink) ;
DWORD IFCCALL CImgSink_GetMinStretch(CImgSink *imgSink);
DWORD IFCCALL CImgSink_GetMaxStretch(CImgSink *imgSink);
BOOL IFCCALL CImgSink_SetDestColorKey(CImgSink *imgSink,DWORD dwNewColorKey);
BOOL IFCCALL CImgSink_SetRemapColor(CImgSink *imgSink,int iFirstIndex, int iLastIndex, COLORREF RemapColor);
DWORD IFCCALL CImgSink_GetDestColorKey(CImgSink *imgSink);
DWORD IFCCALL CImgSink_GetColorKeyRep(CImgSink *imgSink,COLORREF color) ;
SINK_KIND IFCCALL CImgSink_GetKind(CImgSink *imgSink)  ;
/* CImgSrc class */

BOOL IFCCALL CImgSrc_Create(CImgSrc *imgSrc);
WORD IFCCALL CImgSrc_FrameWidth(CImgSrc *imgSrc)  ;
WORD IFCCALL CImgSrc_FrameHeight(CImgSrc *imgSrc)  ;
void IFCCALL CImgSrc_SetAoiPos(CImgSrc *imgSrc,const WORD wxAoiStart, const WORD wyAoiStart);
void IFCCALL CImgSrc_GetAoiPos(CImgSrc *imgSrc,WORD *pwxAoiStart, WORD *pwyAoiStart)  ;
WORD IFCCALL CImgSrc_GetAoiStartX(CImgSrc *imgSrc)  ;
WORD IFCCALL CImgSrc_GetAoiStartY(CImgSrc *imgSrc)  ;
WORD IFCCALL CImgSrc_GetWidth(CImgSrc *imgSrc) ;
WORD IFCCALL CImgSrc_GetHeight(CImgSrc *imgSrc) ;
WORD IFCCALL CImgSrc_GetLinePitch (CImgSrc *imgSrc) ;
WORD IFCCALL CImgSrc_GetBitsPP(CImgSrc *imgSrc) ;
IFC_COLOR IFCCALL CImgSrc_GetColor(CImgSrc *imgSrc) ;
SRC_KIND IFCCALL CImgSrc_GetKind(CImgSrc *imgSrc) ;
pCICamera IFCCALL CImgSrc_GetCamera(CImgSrc *imgSrc) ;
pBYTE IFCCALL CImgSrc_GetBufferAddr(CImgSrc *imgSrc) ;
void IFCCALL CImgSrc_SetBufferAddr(CImgSrc *imgSrc,BYTE *pBuffer);
DWORD IFCCALL CImgSrc_SetOptions(pCImgSrc imgSrc, DWORD dwOptions);
/* CInterrupt class */

BOOL IFCCALL CInterrupt_Connected(CInterrupt *intr);
//pSTRING IFCCALL CInterrupt_MakeIntrSemaName(CInterrupt *intr,pCModule mod,IFC_INTREVENT intrEvent,char *semaName);
BOOL IFCCALL CInterrupt_Clear(CInterrupt *intr);
BOOL IFCCALL CInterrupt_Wait(CInterrupt *intr,DWORD dwMilliseconds);
IFC_INTR_WAIT_TYPE IFCCALL CInterrupt_WaitIntrOrEventSet(CInterrupt *intr,DWORD dwMilliseconds, OS_event_t event1, OS_event_t event2, OS_event_t event3);
   
void IFCCALL CInterrupt_Rearm(CInterrupt *intr);
/* COverlay class */

BOOL IFCCALL COverlay_Create(COverlay *overlay);
IFC_HDC IFCCALL COverlay_GetOverlayDC(COverlay *overlay);
void IFCCALL COverlay_ReleaseOverlayDC(COverlay *overlay,IFC_HDC hDC);
WORD IFCCALL COverlay_GetBitsPP(COverlay *overlay) ;
WORD IFCCALL COverlay_GetWidth(COverlay *overlay);
WORD IFCCALL COverlay_GetHeight(COverlay *overlay);
DWORD IFCCALL COverlay_GetMinStretch(COverlay *overlay);
DWORD IFCCALL COverlay_GetMaxStretch(COverlay *overlay);
BOOL IFCCALL COverlay_LockOverlay(COverlay *overlay);
BOOL IFCCALL COverlay_UnlockOverlay(COverlay *overlay);
OVERLAY_KIND IFCCALL COverlay_GetKind(COverlay *overlay);
void IFCCALL COverlay_Enable(COverlay *overlay,BOOL bEnable);
 
BOOL IFCCALL COverlay_IsEnabled(COverlay *overlay)  ;
/* CPCDig Class */
BOOL IFCCALL CPCDig_SetAcqTriggerEvents(CICapMod *capMod,PCD_TRIG_MODE_TYPE startEvent , PCD_TRIG_MODE_TYPE stopEvent,DWORD numFramesPerTrig);
/* Global Functions */
/* Create CapMod */
pCICapMod IFCCALL IFC_IfxCreateCaptureModule(char *modName,DWORD seqnum, char *cfgFile);
/* Create CImgConn */
pCImgConn IFCCALL IFC_IfxCreateImgConn_Cam(	
				CICamera *pCamera, 
				IFC_HWND hWnd, 
				DWORD Flags , 
				ICAP_INTR_EVENT intrEvent , 
				int iScale );
 

pCImgConn IFCCALL IFC_IfxCreateImgConn_HostBuf(
				BYTE *pImgBuffer, WORD wWidth, WORD wHeight, WORD wImgBitsPP, 
				IFC_HWND hwnd, 
				IFC_COLOR eColor , 
				DWORD Flags , 
				CICamera *cam, ICAP_INTR_EVENT intrEvent ,  
				int iScale , 
				pBoolFunc pFunc , void *pArg);
  

pCImgConn IFCCALL IFC_IfxCreateImgConn(
				CImgSrc *pImgSrc, 
				CImgSink *pImgSink,		
				DWORD Flags , 
				CICamera *cam , ICAP_INTR_EVENT intrEvent ,  
				int iScale );
 

pCImgConn IFCCALL IFC_IfxCreateImgConn_WithOverlay(
				CImgSrc *pImgSrc, 
				CImgSink *pImgSink, 
				COverlay *pOverlay, 
				DWORD Flags , 
				CICamera *cam, ICAP_INTR_EVENT intrEvent ,  
				int iScale );
 
/* Create CImgSrc */

pCImgSrc IFCCALL IFC_IfxCreateImgSrc_HostBuf(BYTE *pImgBuffer, CAM_ATTR * pCamAttr);
pCImgSrc IFCCALL IFC_IfxCreateImgSrc_Area(BYTE *pImgBuffer, WORD wWidth, WORD wHeight, WORD wImgBitsPP ,IFC_COLOR eColor,  
			  WORD wxAoiStart, WORD wyAoiStart, WORD wAoiWidth, WORD wAoiHeight);
    
pCImgSrc IFCCALL IFC_IfxCreateImgSrc_Cam(CICamera *pCamera, WORD wxAoiStart, WORD wyAoiStart, WORD wAoiWidth, WORD wAoiHeight);
    


/* Create CImgSink */
pCImgSink IFCCALL IFC_IfxCreateImgSink(IFC_HWND hWnd, SINK_KIND Kind, WORD wSinkStartX, WORD wSinkStartY,	WORD width, WORD height);
/* Creat COverlay */
pCOverlay IFCCALL IFC_IfxCreateOverlay(OVERLAY_KIND Kind,WORD wWidth, WORD wHeight);
/* Create CImgFile */
pCImgFile IFCCALL IFC_IfxCreateImgFile(pSTRING fileName);
void IFCCALL IFC_IfxDeleteImgSrc( pCImgSrc pImgSrc );
void IFCCALL IFC_IfxDeleteImgSink( pCImgSink pImgSink );
void IFCCALL IFC_IfxDeleteImgConn( pCImgConn pImgConn );
void IFCCALL IFC_IfxDeleteOverlay( pCOverlay pOverlay );
void IFCCALL IFC_IfxDeleteImgFile( pCImgFile pImgFile );
void IFCCALL IFC_IfxDeleteCaptureModule( pCICapMod pCapMod );
void IFCCALL IFC_IfxSetConsoleHandler(pfCONSOLEHDLR handler);
DWORD IFC_EXT_API IFC_IfxGetLastError(void);
pCInterrupt IFCCALL IFC_IfxCreateInterrupt(pCModule mod,IFC_INTREVENT intrEvent);
PCParentMod IFCCALL IFC_IfxCreateVirtualParentModule(char *modName, DWORD seqnum, char *cfgFile, char *DaughterModNames);
BOOL IFCCALL IFC_IfxWriteImgFile(pSTRING fileName,BYTE *src, DWORD dx, DWORD dy, WORD bitsPerPixel, IFFCLASS_TYPE imgClass, IFFCOMPRESSION_TYPE imgCompress);
BOOL IFCCALL IFC_IfxReadImgFile(pSTRING fileName,BYTE *dest,LPIMGFILEPROPS props);