ncap/Ifc58/examples/VB/Ifcapi.bas


Declare Sub CImgConn_Display Lib "ifcapi.dll" (ByVal imgConn As Long)
Declare Function CImgConn_Create Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_StartLiveImage Lib "ifcapi.dll" (ByVal imgConn As Long, ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT, ByVal InterruptScale As Integer) As Integer
Declare Function CImgConn_StopLiveImage Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_LiveImageSuspend Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_LiveImageResume Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_GetLiveImageFPS Lib "ifcapi.dll" (ByVal imgConn As Long) As Double
Declare Function CImgConn_GetOverlayDC Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Sub CImgConn_ReleaseOverlayDC Lib "ifcapi.dll" (ByVal imgConn As Long, ByVal hDC As Long)
Declare Sub CImgConn_EnableOverlay Lib "ifcapi.dll" (ByVal imgConn As Long, ByVal bEnable As Boolean)
'Declare Function CImgConn_GetImgServer lib "ifcapi.dll" (ByVal imgConn As Long) As 'CCallBackServer
Declare Function CImgConn_GetSrc Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Function CImgConn_GetSink Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Function CImgConn_GetOverlay Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Function CImgConn_GetOverlayWidth Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_GetOverlayHeight Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_GetOverlayMaxStretch Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Function CImgConn_GetOverlayBitsPP Lib "ifcapi.dll" (ByVal imgConn As Long) As Integer
Declare Function CImgConn_GetOverlayMinStretch Lib "ifcapi.dll" (ByVal imgConn As Long) As Long
Declare Function CImgConn_GetOverlayKind Lib "ifcapi.dll" (ByVal imgConn As Long) As OVERLAY_KIND
Declare Function CImgFile_ReadFile Lib "ifcapi.dll" (ByVal imgFile As Long, ByRef dest As Byte) As Integer
Declare Function CImgFile_WriteFile Lib "ifcapi.dll" (ByVal imgFile As Long, ByRef src As Byte, ByVal dx As Long, ByVal dy As Long, ByVal bitsPerPixel As Integer, ByVal imgClass As IFFCLASS_TYPE, ByVal imgCompress As IFFCOMPRESSION_TYPE) As Integer
'Declare Function CImgFile_ImageFileProps lib "ifcapi.dll" (ByVal imgFile As Long,LPIMGFILEPROPS props) As Integer
Declare Function CImgSink_GetAoiStartX Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_GetAoiStartY Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_GetWidth Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_GetHeight Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_GetLinePitch Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Sub CImgSink_SetAoiPos Lib "ifcapi.dll" (ByVal imgSink As Long, ByVal wxAoiStart As Integer, ByVal wyAoiStart As Integer)
Declare Sub CImgSink_GetAoiPos Lib "ifcapi.dll" (ByVal imgSink As Long, ByRef pwxAoiStart As Integer, ByRef pwyAoiStart As Integer)
Declare Function CImgSink_GetSinkWindow Lib "ifcapi.dll" (ByVal imgSink As Long) As Long
Declare Sub CImgSink_GetZoom Lib "ifcapi.dll" (ByVal imgSink As Long, ByRef ZoomX As Double, ByRef ZoomY As Double)
Declare Sub CImgSink_SetZoom Lib "ifcapi.dll" (ByVal imgSink As Long, ByVal ZoomX As Double, ByVal ZoomY As Double)
Declare Function CImgSink_GetZoomX Lib "ifcapi.dll" (ByVal imgSink As Long) As Double
Declare Function CImgSink_GetZoomY Lib "ifcapi.dll" (ByVal imgSink As Long) As Double
Declare Function CImgSink_ResizeWindow Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_Create Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_MakeCopy Lib "ifcapi.dll" (ByVal imgSink As Long) As Long
Declare Function CImgSink_GetBufferAddr Lib "ifcapi.dll" (ByVal imgSink As Long) As String
Declare Function CImgSink_GetBitsPP Lib "ifcapi.dll" (ByVal imgSink As Long) As Integer
Declare Function CImgSink_GetMinStretch Lib "ifcapi.dll" (ByVal imgSink As Long) As Long
Declare Function CImgSink_GetMaxStretch Lib "ifcapi.dll" (ByVal imgSink As Long) As Long
Declare Function CImgSink_SetDestColorKey Lib "ifcapi.dll" (ByVal imgSink As Long, ByVal dwNewColorKey As Long) As Integer
Declare Function CImgSink_SetRemapColor Lib "ifcapi.dll" (ByVal imgSink As Long, ByVal iFirstIndex As Integer, ByVal iLastIndex As Integer, ByVal RemapColor As Long) As Integer
Declare Function CImgSink_GetDestColorKey Lib "ifcapi.dll" (ByVal imgSink As Long) As Long
Declare Function CImgSink_GetColorKeyRep Lib "ifcapi.dll" (ByVal imgSink As Long, ByVal color As Long) As Long
Declare Function CImgSink_GetKind Lib "ifcapi.dll" (ByVal imgSink As Long) As SINK_KIND
Declare Function CImgSrc_Create Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_FrameWidth Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_FrameHeight Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Sub CImgSrc_SetAoiPos Lib "ifcapi.dll" (ByVal imgSrc As Long, ByVal wxAoiStart As Integer, ByVal wyAoiStart As Integer)
Declare Sub CImgSrc_GetAoiPos Lib "ifcapi.dll" (ByVal imgSrc As Long, ByRef pwxAoiStart As Integer, ByRef pwyAoiStart As Integer)
Declare Function CImgSrc_GetAoiStartX Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetAoiStartY Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetWidth Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetHeight Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetLinePitch Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetBitsPP Lib "ifcapi.dll" (ByVal imgSrc As Long) As Integer
Declare Function CImgSrc_GetColor Lib "ifcapi.dll" (ByVal imgSrc As Long) As IFC_COLOR
Declare Function CImgSrc_GetKind Lib "ifcapi.dll" (ByVal imgSrc As Long) As SRC_KIND
Declare Function CImgSrc_GetCamera Lib "ifcapi.dll" (ByVal imgSrc As Long) As Long
Declare Function CImgSrc_GetBufferAddr Lib "ifcapi.dll" (ByVal imgSrc As Long) As String
Declare Sub CImgSrc_SetBufferAddr Lib "ifcapi.dll" (ByVal imgSrc As Long, ByVal pBuffer As Long)
Declare Function CImgSrc_SetOptions Lib "ifcapi.dll" (ByVal imgSrc As Long, ByVal options As Long) As Long
Declare Function CInterrupt_Connected Lib "ifcapi.dll" (ByVal intr As Long) As Integer
Declare Function CInterrupt_Clear Lib "ifcapi.dll" (ByVal intr As Long) As Integer
Declare Function CInterrupt_Wait Lib "ifcapi.dll" (ByVal intr As Long, ByVal dwMilliseconds As Long) As Integer
'Declare Function CInterrupt_WaitIntrOrEventSet lib "ifcapi.dll" (ByVal intr As Long,ByVal dwMilliseconds As Long, OS_event_t event1, OS_event_t event2, OS_event_t event3) As IFC_INTR_WAIT_TYPE
Declare Sub CInterrupt_Rearm Lib "ifcapi.dll" (ByVal intr As Long)
Declare Function CInterrupt_EventLong Lib "ifcapi.dll" (ByVal intr As Long) As Long
Declare Function COverlay_Create Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_GetOverlayDC Lib "ifcapi.dll" (ByVal Overlay As Long) As Long
Declare Sub COverlay_ReleaseOverlayDC Lib "ifcapi.dll" (ByVal Overlay As Long, ByVal hDC As Long)
Declare Function COverlay_GetBitsPP Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_GetWidth Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_GetHeight Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_GetMinStretch Lib "ifcapi.dll" (ByVal Overlay As Long) As Long
Declare Function COverlay_GetMaxStretch Lib "ifcapi.dll" (ByVal Overlay As Long) As Long
Declare Function COverlay_LockOverlay Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_UnlockOverlay Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function COverlay_GetKind Lib "ifcapi.dll" (ByVal Overlay As Long) As OVERLAY_KIND
Declare Sub COverlay_Enable Lib "ifcapi.dll" (ByVal Overlay As Long, ByVal bEnable As Boolean)
Declare Function COverlay_IsEnabled Lib "ifcapi.dll" (ByVal Overlay As Long) As Integer
Declare Function CPCDig_SetAcqTriggerEvents Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal startEvent As PCD_TRIG_MODE_TYPE, ByVal stopEvent As PCD_TRIG_MODE_TYPE, ByVal numFramesPerTrig As Long) As Integer
Declare Function IFC_IfxCreateCaptureModule Lib "ifcapi.dll" (ByVal modName As String, ByVal seqnum As Long, ByVal cfgFile As String) As Long
Declare Function IFC_IfxCreateImgConn_Cam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal hwnd As Long, ByVal Flags As Long, ByVal intrEvent As ICAP_INTR_EVENT, ByVal iScale As Integer) As Long
Declare Function IFC_IfxCreateImgConn_HostBuf Lib "ifcapi.dll" (ByRef pImgBuffer As Byte, ByVal wWidth As Integer, ByVal wHeight As Integer, ByVal wImgBitsPP As Integer, ByVal hwnd As Long, ByVal eColor As IFC_COLOR, ByVal Flags As Long, ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT, ByVal iScale As Integer, ByVal pFunc As Long, ByRef pArg As Byte) As Long
Declare Function IFC_IfxCreateImgConn Lib "ifcapi.dll" (ByVal imgSrc As Long, ByVal imgSink As Long, ByVal Flags As Long, ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT, ByVal iScale As Integer) As Long
Declare Function IFC_IfxCreateImgConn_WithOverlay Lib "ifcapi.dll" (ByVal imgSrc As Long, ByVal imgSink As Long, ByVal Overlay As Long, ByVal Flags As Long, ByVal pCamera As Long, ByVal intrEvent As ICAP_INTR_EVENT, ByVal iScale As Integer) As Long
Declare Function IFC_IfxCreateImgSrc_HostBuf Lib "ifcapi.dll" (ByRef pImgBuffer As Byte, ByRef pCamAttr As CAM_ATTR) As Long
Declare Function IFC_IfxCreateImgSrc_Area Lib "ifcapi.dll" (ByRef pImgBuffer As Byte, ByVal wWidth As Integer, ByVal wHeight As Integer, ByVal wImgBitsPP As Integer, ByVal eColor As IFC_COLOR, ByVal wxAoiStart As Integer, ByVal wyAoiStart As Integer, ByVal wAoiWidth As Integer, ByVal wAoiHeight As Integer) As Long
Declare Function IFC_IfxCreateImgSrc_Cam Lib "ifcapi.dll" (ByVal pCamera As Long, ByVal wxAoiStart As Integer, ByVal wyAoiStart As Integer, ByVal wAoiWidth As Integer, ByVal wAoiHeight As Integer) As Long
Declare Function IFC_IfxCreateImgSink Lib "ifcapi.dll" (ByVal hwnd As Long, ByVal Kind As SINK_KIND, ByVal wSinkStartX As Integer, ByVal wSinkStartY As Integer, ByVal width As Integer, ByVal height As Integer) As Long
Declare Function IFC_IfxCreateOverlay Lib "ifcapi.dll" (ByVal Kind As OVERLAY_KIND, ByVal wWidth As Integer, ByVal wHeight As Integer) As Long
Declare Function IFC_IfxCreateImgFile Lib "ifcapi.dll" (ByVal fileName As String) As Long
Declare Sub IFC_IfxDeleteImgSrc Lib "ifcapi.dll" (ByVal pImgSrc As Long)
Declare Sub IFC_IfxDeleteImgSink Lib "ifcapi.dll" (ByVal pImgSink As Long)
Declare Sub IFC_IfxDeleteImgConn Lib "ifcapi.dll" (ByVal pImgConn As Long)
Declare Sub IFC_IfxDeleteOverlay Lib "ifcapi.dll" (ByVal pOverlay As Long)
Declare Sub IFC_IfxDeleteImgFile Lib "ifcapi.dll" (ByVal pImgFile As Long)
Declare Sub IFC_IfxDeleteCaptureModule Lib "ifcapi.dll" (ByVal pCapMod As Long)
Declare Function IFC_IfxGetLastError Lib "ifcapi.dll" () As Long
Declare Sub IFC_IfxSetConsoleHandler Lib "ifcapi.dll" (ByVal pfCONSOLEHDLR As Long)
Declare Function IFC_IfxCreateInterrupt Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal intrEvent As Long) As Long
Declare Function IFC_IfxCreateVirtualParentModule Lib "ifcapi.dll" (ByVal modName As String, ByVal seqnum As Long, ByVal cfgFile As String, ByVal DaughterModNames As String) As Long
Declare Function IFC_IfxWriteImgFile Lib "ifcapi.dll" (ByVal fileName As String, ByRef src As Byte, ByVal dx As Long, ByVal dy As Long, ByVal bitsPerPixel As Integer, ByVal imgClass As IFFCLASS_TYPE, ByVal imgCompress As IFFCOMPRESSION_TYPE) As Long
Declare Function IFC_IfxReadImgFile Lib "ifcapi.dll" (ByVal fileName As String, ByRef dest As Byte, ByRef props As IMGFILEPROPS) As Long
